--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
             <div class="timeline">
                 <div class="timeline-item hidden">
                     <div class="timeline-content">
+                        <span class="time-year">2018</span>
+                        <h3>Técnico em Desenvolvimento de Sistemas</h3>
+                        <p>ETEC Rodrigues de Abreu</p>
+                        <p style="font-size: 0.8rem; margin-top: 5px; opacity: 0.7;">Desenvolvimento de sistemas de informação.</p>
+                    </div>
+                </div>
+                <div class="timeline-item hidden">
+                    <div class="timeline-content">
+                        <span class="time-year">2022</span>
+                        <h3>Artificial Intelligence for Advanced Analytics</h3>
+                        <p>I²A² | ABDI</p>
+                        <p style="font-size: 0.8rem; margin-top: 5px; opacity: 0.7;">Internacionalização e IA aplicada.</p>
+                    </div>
+                </div>
+                <div class="timeline-item hidden">
+                    <div class="timeline-content">
+                        <span class="time-year">2023</span>
+                        <h3>Data Engineering (Técnico)</h3>
+                        <p>Ada Tech</p>
+                    </div>
+                </div>
+                <div class="timeline-item hidden">
+                    <div class="timeline-content">
                         <span class="time-year">2024 - 2027</span>
                         <h3>Bacharelado em Estatística</h3>
                         <p>Centro Universitário FMU</p>
@@ -87,21 +110,8 @@
                         <p style="font-size: 0.8rem; margin-top: 5px; opacity: 0.7;">Engenharia de Software e Arquitetura.</p>
                     </div>
                 </div>
-                <div class="timeline-item hidden">
-                    <div class="timeline-content">
-                        <span class="time-year">2023</span>
-                        <h3>Data Engineering (Técnico)</h3>
-                        <p>Ada Tech</p>
-                    </div>
-                </div>
-                <div class="timeline-item hidden">
-                    <div class="timeline-content">
-                        <span class="time-year">2022</span>
-                        <h3>AI Intern (Deep Learning)</h3>
-                        <p>Institute for Applied AI (Toronto)</p>
-                        <p style="font-size: 0.8rem; margin-top: 5px; opacity: 0.7;">Internacionalização e IA aplicada.</p>
-                    </div>
-                </div>
+
+
             </div>
         </div>
     </section>
@@ -128,3 +138,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
