Add 'Sensoriamento Remoto' to skills section
Updated the skills section to include 'Sensoriamento Remoto' and adjusted the corresponding content.

--- a/index.html
+++ b/index.html
@@ -57,11 +57,17 @@
                     <h3>Dev Software</h3>
                     <p>Desenvolvimento Full-Stack, APIs, automações Python e Apps Web (Streamlit).</p>
                 </div>
+                <div class="glow-card hidden">
+                    <div class="icon-box green"><i class="fas fa-tree"></i></div>
+                    <h3>Sensoriamento Remoto</h3>
+                    <p>Conhecimento profundo em manipulação e processamento de imagens em GIS</p>
+                </div>
                  <div class="glow-card hidden">
                     <div class="icon-box green"><i class="fas fa-tree"></i></div>
                     <h3>Eng. Florestal</h3>
                     <p>Conhecimento profundo de silvicultura, inventário e variáveis biológicas.</p>
                 </div>
+
             </div>
         </div>
     </section>
@@ -138,4 +144,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
