--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <p>© 2025 Eliohan Yamauti Poiati</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/eliohanyp" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:ohan.tu@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:eliohanyp@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </footer>
@@ -326,5 +326,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
